<resources>
    <string name="connect_error">网络连接失败，请检查网络</string>
    <string name="user_agreement">请您在使用前仔细阅读《用户服务协议》和《隐私政策》，开始使用代表您已阅读并同意。</string>
    <string name="privacy">\n\t\t隐私声明
 \n\t\t隐私声明尊重并保护所有使用隐私声明网络服务用户的个人隐私权。
 \n\t\t为了给您提供更准确、更有个性化的服务，我们的隐私声明涵盖我们收集，使用，披露，传输和存储您的信息的方式。但隐私声明将以高度的勤勉、审慎义务对待这些信息。隐私声明会不时更新本隐私权政策。 为了更好地改进产品体验，同时持续提供手机用户最佳的服务，在不会涉及用户个人隐私及敏感数据的前提下，我们会采用如下方式收集您的设备和其他相关信息，本协议解释了这些情况下的信息收集和使用情况。
 \n\t\t信息的收集和使用
  \n\t\t1.读取手机状态和身份
  \n\t\t友盟统计需要，获取设备唯一标识信息，用于统计用户使用情况
 \n\t\t2.大致位置（基于网络）
 \n\t\t友盟统计需要，获取用户大概位置，用于统计用户地区分布
 \n\t\t3.无线网络
 \n\t\t用于进行网络定位
 \n\t\t4.查看网络连接
 \n\t\t用于检查网络开启状态
 \n\t\t5.定位
 \n\t\t用于获取当前位置，请求天气信息
 \n\t\t6.储存
 \n\t\t用于储存用户常用天气位置
 \n\t\t7.相机
 \n\t\t用于用户反馈拍照上传信息
 \n\t\t8.其他
 \n\t\t安装或卸载快捷方式、与蓝牙设置配对、控制手机振动等等
 \n\t\t使用的SDK
 \n\t\t1.友盟移动统计SDK
 \n\t\t提供方名称：友盟同欣（北京）科技有限公司
 \n\t\t场景描述：针对App的各纬度的统计功能
 \n\t\t收集方式：调用系统相关接口自动采集
 \n\t\t个人信息类型：个人常用设备信息、位置信息、网络信息、个人通信信息
 \n\t\t个人信息字段：设备信息：设备标识符（IMEI、IDFA、Android ID、MAC、OAID等相关信息）、应用信息（应用崩溃信息、通知开关状态、软件列表等相关信息）、设备参数及系统信息（设备类型、设备型号、操作系统及硬件相关信息）
 \n\t\t网络信息：IP地址，WiFi信息，基站信息等相关信息
 \n\t\t用途或目的：用于统计详细崩溃日志以及行为分析
 \n\t\t是否为必要信息：是
 \n\t\t信息处理方式：采用去标识化方式对个人信息进行脱敏展示
 \n\t\t隐私政策：https://www.umeng.com/page/policy?spm=a211eg.10560647.0.0.547034dcafEUZJ
 \n\t\t2.优量汇SDK
 \n\t\t提供方名称：腾讯
 \n\t\t场景描述：通过识别设备信息和地理位置和网络信息用于创建智能标签，为用户推送更智能合理的广告。
 \n\t\t收集方式：调用系统相关接口自动采集
 \n\t\t个人信息类型：个人常用设备信息、位置信息、网络信息、个人通信信息
 \n\t\t个人信息字段：设备信息：设备标识符（IMEI、IDFA、Android ID、MAC、OAID等相关信息）、应用信息（应用崩溃信息、通知开关状态、软件列表等相关信息）、设备参数及系统信息（设备类型、设备型号、操作系统及硬件相关信息） 网络信息：IP地址，WiFi信息，基站信息等相关信息
 \n\t\t网络信息：IP地址，WiFi信息，基站信息等相关信息， 用户聊天信息
 \n\t\t用途或目的：为了实现便签云备份功能，避免用户的保存的便签丢失，和换手机之后能及时同步
 \n\t\t是否为必要信息：是
 \n\t\t信息处理方式：采用去标识化方式对个人信息进行脱敏展示
 \n\t\t隐私政策：https://imgcache.qq.com/gdt/cdn/adn/uniondoc/ylh_sdk_privacy_statement.html
 \n\t\t3.穿山甲SDK
 \n\t\t提供方名称：今日头条
 \n\t\t场景描述：通过识别设备信息和地理位置和网络信息用于创建智能标签，为用户推送更智能合理的广告。
 \n\t\t收集方式：调用系统相关接口自动采集
 \n\t\t个人信息类型：个人常用设备信息、位置信息、网络信息、个人通信信息
 \n\t\t个人信息字段：设备信息：设备标识符（IMEI、IDFA、Android ID、MAC、OAID等相关信息）、应用信息（应用崩溃信息、通知开关状态、软件列表等相关信息）、设备参数及系统信息（设备类型、设备型号、操作系统及硬件相关信息）
 \n\t\t网络信息：IP地址，WiFi信息，基站信息等相关信息
 \n\t\t用途或目的：展示第三方广告
 \n\t\t是否为必要信息：是
 \n\t\t信息处理方式：采用去标识化方式对个人信息进行脱敏展示
 \n\t\t隐私政策：https://partner.oceanengine.com/privacy
 \n\t\t4.移动用户反馈SDK
 \n\t\t提供方名称：阿里巴巴集团
 \n\t\t场景描述：通过识别设备信息为App赋予即时消息送达能力，用于即时消息；可用于应用程序内聊天，联系客服，即时反馈用户问题，和解决用户的问题。
 \n\t\t收集方式：调用系统相关接口自动采集
 \n\t\t用途或目的：为App赋予即时通讯能力，可用于即时消息；可用于应用程序内聊天，联系客服，即时反馈用户问题，和解决用户的问题。
 \n\t\t是否为必要信息：是
 \n\t\t信息处理方式：采用去标识化方式对个人信息进行脱敏展示
 \n\t\t隐私政策：https://help.aliyun.com/document_detail/53266.html?spm=a2c4g.11186623.6.562.4da733fcTJ1tDC
 \n\t\t5.高德地图SDK
 \n\t\t提供方名称：阿里巴巴集团
 \n\t\t场景描述：通过GPS,获取当前位置
 \n\t\t收集方式：调用系统相关接口自动采集
 \n\t\t用途或目的：为用户提供当前位置的天气信息
 \n\t\t是否为必要信息：是
 \n\t\t信息处理方式：采用去标识化方式对个人信息进行脱敏展示
 \n\t\t隐私政策：https://lbs.amap.com/pages/terms/
 \n\t\t第三方帐户
 \n\t\t我们的App不存储任何其他第三方服务密码。您的帐户信息不会透露给此应用程序，您可以随时取消与此应用程序的任何社交网站连接。
 \n\t\t共享个人数据
 \n\t\t为了改进我们的产品并为您提供更好的服务，我们还与代表我们工作的供应商或代理商共享个人数据，用于本隐私声明中所述的目的。例如，我们雇用提供数据分析服务的公司可能需要收集和访问个人数据以提供这些功能。在这种情况下，这些公司必须遵守我们的数据隐私和安全要求。
 \n\t\t信息保护
您的信息的安全性对我们很重要。我们保持适当的技术和物理保护措施，以保护您的信息免遭意外或非法破坏或丢失，更改，未经授权的泄露或访问，使用以及我们拥有的所有其他非法形式的数据处理。我们使用与其他类似应用程序开发人员相同的技能来保护您的个人信息。但是，由于互联网不是一个完全安全的环境，我们无法保证您通过我们的应用程序传输的信息不会因违反我们的任何保护措施而被访问，披露，更改或破坏。
 \n\t\t数据处理的法律依据
出于本隐私声明中规定的目的，我们处理个人数据，如上所述。我们处理个人数据的法律依据包括以下处理：与您签订合同所必需的处理（例如，为您提供您请求的服务以及识别和验证您以便您使用本网站）; 必须遵守法律要求（例如，遵守适用的会计规则并向执法部门强制披露）; 我们的合法利益所必需的（例如，管理我们与您的关系，确保我们服务的安全性，与您沟通我们的产品和服务）; 并基于我们客户的同意（例如，放置某些cookie并与第三方共享您的信息用于广告目的）。 在某些情况下，您可能需要向我们提供个人数据以进行上述处理，以便我们能够为您提供我们的所有服务，并让您使用我们应用程序的所有功能。
 \n\t\t国际个人数据传输
我们的业务可能要求我们将您的个人数据传输到欧洲经济区（“EEA”）以外的国家，包括中华人民共和国或新加坡等国家。我们采取适当措施确保您的个人数据接收者必须遵守保密义务，并采取标准合同条款等措施。可以通过联系我们的帮助中心获取这些条款的副本。
 \n\t\t免责声明
 \n\t\t就下列相关事宜的发生，深圳市三人网络科技有限公司不承担任何法律责任：
 \n\t\t1、由于您将用户密码告知他人或与他人共享注册帐户，由此导致的任何个人信息的泄露，或其他非因%1$s原因导致的个人信息的泄露；
 \n\t\t2、%1$s根据法律规定或政府相关政策要求提供您的个人信息；
 \n\t\t3、任何第三方根据%1$s各服务条款及声明中所列明的情况使用您的个人信息，由此所产生的纠纷；
 \n\t\t4、任何由于黑客攻击、电脑病毒侵入或政府管制而造成的暂时性软件功能暂停；
 \n\t\t5、因不可抗力导致的任何后果；
 \n\t\t6、%1$s在各服务条款及声明中列明的使用方式或免责情形。
 \n\t\t如果您使用了上述%1$s提供的服务，则表明您理解并同意上述协议并授权深圳市三人网络科技有限公司接收您提供的有关个人信息，及授权%1$s存储备份您提供的有关个人信息。
 \n\t\t隐私声明变更
 \n\t\t本隐私声明可能会不时更新。我们将通过在此页面上发布新的隐私声明来通知您我们的隐私声明的任何变更。建议您定期查阅本隐私声明以了解任何变更。
 \n\t\t联系我们
 \n\t\t如果您对的隐私声明或数据处理有任何问题或顾虑，请通过以下方式与本团队联系。
 \n\t\t联系邮箱：ilovecall@sina.com</string>
    <string name="point">.</string>
    <string name="clear">清空</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_f">F</string>
    <string name="_e">E</string>
    <string name="_d">D</string>
    <string name="_c">C</string>
    <string name="_a">A</string>
    <string name="_b">B</string>
</resources>