<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">

                <Button
                    android:id="@+id/seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/eight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/nine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_9" />


                <Button
                    android:id="@+id/f"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_f" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">

                <Button
                    android:id="@+id/four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/e"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_e" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">

                <Button
                    android:id="@+id/one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/d"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_d" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">

                <Button
                    android:id="@+id/zero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/a"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_a" />
                <Button
                    android:id="@+id/b"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_b" />
                <Button
                    android:id="@+id/c"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keyboar_button"
                    android:text="@string/_c" />
                <!--<Button-->
                <!--android:id="@+id/dot"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/keyboar_button"-->
                <!--android:text="@string/point" />-->


            </TableRow>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_weight="1"
                android:background="@drawable/keyboar_button"
                android:drawablePadding="10dp"
                android:src="@mipmap/key_delete"
                />

            <Button
                android:id="@+id/bt_clear"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/keyboar_button"
                android:text="@string/clear" />


            <Button
                android:id="@+id/dot"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/keyboar_button"
                android:text="@string/point" />


        </LinearLayout>

    </LinearLayout>




</LinearLayout>